# cpp_cinema

./: .gitmodules  CMakeLists.txt  main.cpp  readme.md
src/: error.cpp  error.h  main.cpp  video.cpp  video.h
